--- a/src/main/resources/assets/beyond_planets_dimensions/lang/en_us.json
+++ b/src/main/resources/assets/beyond_planets_dimensions/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "gui.beyond_planets_dimensions.planet_selection.expanded_system": "Expanded",
-  "gui.beyond_planets_dimensions.planet_selection.sunflower_planet": "Sunflower"
+  "gui.beyond_planets_dimensions.planet_selection.sunflower_planet": "Sunflower",
+  "gui.beyond_planets_dimensions.planet_selection.cat_tonic_planet": "Cat Tonic"
 }
