now works witht the latest dev build of Beyond Earth

--- a/src/main/resources/assets/beyond_planets_dimensions/lang/en_us.json
+++ b/src/main/resources/assets/beyond_planets_dimensions/lang/en_us.json
@@ -1,5 +1,4 @@
 {
   "gui.beyond_planets_dimensions.planet_selection.expanded_system": "Expanded",
-  "gui.beyond_planets_dimensions.planet_selection.sunflower_planet": "Sunflower",
-  "gui.beyond_planets_dimensions.planet_selection.cat_tonic_planet": "Cat Tonic"
+  "gui.beyond_planets_dimensions.planet_selection.paws_hunter_planet": "Paws Hunter"
 }
